# bicam-collection

./: .gitignore  README.md  pyproject.toml
api_interface/pycon/: setup.py
backfills/: base_backfill.py  bills_backfill.py  committees_backfill.py  members_backfill.py  nominations_backfill.py  post_process_update.py
bulk_exports/: exporter.py  s3_upload.py
cleaning/: cleaner.py  cleaning_coordinator.py  final_cleaning_and_creation.py
cleaning/datatypes/: amendments.py  committee_prints.py  committee_reports.py  committeereports.py  congressional_directories.py  nominations.py  treaties.py  treaty_docs.py
cleaning_scripts/: final_cleaning_and_creation.py
cleaning_scripts/cleaning_utils/: insert_data.py  optimizations.py  read_data.py
cleaning_scripts/datatypes/: bill_collections.py  bills.py  committeemeetings.py  committeeprints.py  committees.py  congresses.py  congressional_hearings.py  debug_bills.py  hearings.py  (+2 more)
database_construction/: build_prod_schema_congressional.sql  build_prod_schema_govinfo.sql  build_schema_bicam.sql  build_schema_govinfo.sql  build_schemas.sql  build_staging_schema_congressional.sql  join_congressional_govinfo.sql
lobbyist_matching/: batch_processor.py  db_utils.py  main.py  matcher.py  paragraph_processor.py  post_processor.py  progress_tracker.py  schema_setup.py  section_processor.py  timeout_handler.py
scrapers/: cleanup_script.py  congressional_cleanup.py  congressional_config.yaml  govinfo_cleanup.py  govinfo_config.yaml  govinfo_scraper.py  insert_csvs.py  q_scraper.py  relevant_fields.yaml  scrape_text_links.py
(+16 files in other folders)
