[project]
name = "bicam-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "duckdb",
    "pandas",
    "psycopg2-binary",
    "pyyaml",
    "python-dotenv",
    "tqdm",
    "boto3>=1.37.34",
    "botocore>=1.37.34",
]
